--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,33 @@
 <!-- NG-ZORRO -->
-<a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank" style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
-  <img height="300" alt="logo" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
-</a>
+
+<div>
+  <nz-header
+    class="main-header"
+    nz-row
+    nzType="flex"
+    style="background-color: #003973"
+  >
+    <div>
+      <a
+        style="
+          color: white;
+          margin-left: 50px;
+          font-size: 18px;
+          font-weight: bolder;
+        "
+        routerLink="/sign-in"
+        >Sell Car Service</a
+      >
+    </div>
+    <div class="nav-links">
+      <a nz-button nzType="link" routerLink="/sign-up" routerLinkActive="active"
+        >Sign Up</a
+      >
+      <a nz-button nzType="link" routerLink="/sign-in" routerLinkActive="active"
+        >Sign In</a
+      >
+    </div>
+  </nz-header>
+</div>
+
+<router-outlet></router-outlet>
